--- a/src/app/esport/esport.component.html
+++ b/src/app/esport/esport.component.html
@@ -153,7 +153,7 @@
 
 <!-- ============================================================= -->
 
-<section>
+<!-- <section>
 <div class="bitcoin-esports-main">
 
     <div class="bitcoin-esports-col1">
@@ -184,7 +184,7 @@
 
     </div>
 </div>
-</section>
+</section> -->
 <!-- ============================================================= -->
 
 <app-contact-com></app-contact-com>
@@ -231,16 +231,6 @@ Fighting Games: Street Fighter, Super Smash Bros, Tekken.</p>
 
 <h3>Do you offer affiliate systems for eSports?</h3>
 <p>Yes, indeed our eSports betting platform network is based on 5 levels:</p>
-
-<h3>Do you have the Mobile version?</h3>
-
-<ol>
-<li><strong> Platform administrator </strong>- the access to the backend (it is also possible to create other accesses to the Back office with limited privileges and permissions).</li>
-<li><strong>  Reseller </strong>- a master-agent supervising several betting shops. Earning commissions on shop’s turnover or profits.</li>
-<li><strong>  Betting shop</strong> - it represents the physical point where players can play, deposit, etc. Through this account it is possible to place bets and earn commission on turnover or profits.</li>
-<li><strong> Cashier,</strong>  the profile for the betting shops's employees, able to place bets without earning any commissions.</li>
-<li><strong>Online player,</strong>  register your game account online or at a shop, place bets.</li>
-</ol>
 
 <h3>Can I run a eSports betting platform without dealing with the odds and trading management?</h3>
 <p>Our eSports betting solutions come with the odds feed included. The software embeds many features and tools to manage the odds margins and configurations in complete autonomy. If you want to focus on the shops and players management only, we provide trading services and support.</p>
@@ -317,16 +307,6 @@ Fighting Games: Street Fighter, Super Smash Bros, Tekken.</p>
 
         <h3>Can I add some features, reports and pages to the eSports betting software?</h3>
         <p>The eSports betting software includes a wide range of reports, pages and banners that can be customized (CMS) or developed upon request. If you would like us to develop a new feature, we will work alongside you creating a tailored project: collection of information and details, submission of the project/rendering, testing and final release.</p>
-
-        <h3>Do you have banking and payment gateway services available?</h3>
-        <p>All the eSports betting solutions provided by Vrnl are integrated with many different payment gateways. Aside from the FIAT currencies, we have also integrated a <strong> Bitcoin wallet </strong>to deposit in over <strong> 40 different crypto-currencies.</strong> And if you want to use a specific PSP, no issues, we will make the integration for you!</p>
-
-        <h3>What payment processors are available?</h3>
-        <p>The software has a feature that allows you to manually top up and issue vouchers that can be sold at the betting shops, against the payment of cash or POS payment on site. It is also possible to print prepaid cards that can be sold in points of sale and betting shops.</p>
-
-        <p>Referring to specific markets, we have integrated many payment systems and beyond Visa and Mastercard, we have already available: PayU, Flutterwave, Paystack, Interswitch, UbPay, Sobflous, NiuBiz and Yacare. Just apply for a Merchant ID to activate the already integrated services.</p>
-
-        <p>If there are specific needs and requests, we can integrate new payment systems.</p>
 
         <h3>Can I use my eSports logo and brand colors?</h3>
         <p>Yes you can. We provide different solutions based on your specific requirements. Indeed, we can create bespoke eSports solutions collecting your requests and setting up a project for you or we can provide a turnkey solution, modifying your eSports brand colors and logo only.</p>
