--- a/src/app/live-casino/live-casino.component.html
+++ b/src/app/live-casino/live-casino.component.html
@@ -72,9 +72,9 @@
 
     <div class="container7-col2">
         <h2 ><strong style="color: #575756;">live casino API</strong> integrations</h2>
-        <!-- <p class="container7-col2-content">It allows you to enable our <strong style="color: #575756;">live casino software</strong> in a few days, furthermore the service
+        <p class="container7-col2-content">It allows you to enable our <strong style="color: #575756;">live casino software</strong> in a few days, furthermore the service
             is fully managed by us and<strong style="color: #575756;"> we guarantee the widest range of live games available online
-            </strong>many of our games are also <strong style= "color: #575756;">available for land-based casinos.</strong></p> -->
+            </strong></p>
 
     
 
