--- a/src/app/online-sportsbook/online-sportsbook.component.html
+++ b/src/app/online-sportsbook/online-sportsbook.component.html
@@ -83,7 +83,7 @@
   </h2>
   <div class="wpb_text_column wpb_content_element ">
 		<div class="wpb_wrapper">
-			<p>We offer <a style="color: #a0c528;" href="#">White Label Casino</a> with over 30.000 games is&nbsp;also available in <a style="color: #a0c528;" href="#">Crypto Casino</a>.</p>
+			<p>We offer <a style="color: #a0c528;" href="#">White Label Casino</a> with over 30.000 games</p>
 <p>Gaming license and legal Service to start Casino business, the gaming math is secure and certified.</p>
 <p>We have singled up the best gaming providers with the aim of offering you the widest selection of&nbsp;live casino games&nbsp;and&nbsp;casino games available online.</p>
 
@@ -168,7 +168,7 @@
           </div>
         </div>
       </section>
-      <section class="data_treading_sec">
+      <!-- <section class="data_treading_sec">
     <h1 class="treading_head">Data & Trading</h1>
     <p class="theading_para">We offer trading and risk management services, odds management consultancy and winnings coverage. Vrnl started its business as risk manager 15 years ago,  since then we have been continuously investing in our mathematical algorithm to guarantee zero losses! We are so confident in our system that we pay you in case of loss.</p>  
 
@@ -187,7 +187,7 @@ Gambling Payment System
 </li>
 <li>The platform accepts all the cryptocurrencies currently existing and many types of payment methods. </li>
 </ul>
-      </section>
+      </section> -->
 
 
       <app-contact-com></app-contact-com>
