--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -247,7 +247,7 @@
 </section>
 <!-- ================================================================================= -->
 
-<section>
+<!-- <section>
   <div class="sportsbetting-online-retail-main">
     <div class="sportsbetting-online-retail-col1">
       <img class="payment_img" class="payment_system" src="assets/sirplay vrnl 32_payment.webp" alt="" />
@@ -285,7 +285,7 @@
       </p>
     </div>
   </div>
-</section>
+</section> -->
 
 <!--============= accodian start here  =============-->
 
