--- a/src/app/esport/esport.component.html
+++ b/src/app/esport/esport.component.html
@@ -153,7 +153,7 @@
 
 <!-- ============================================================= -->
 
-<section>
+<!-- <section>
 <div class="bitcoin-esports-main">
 
     <div class="bitcoin-esports-col1">
@@ -184,7 +184,7 @@
 
     </div>
 </div>
-</section>
+</section> -->
 <!-- ============================================================= -->
 
 <app-contact-com></app-contact-com>
