--- a/src/app/i-frame/i-frame.component.html
+++ b/src/app/i-frame/i-frame.component.html
@@ -60,7 +60,7 @@
     </div>
   </section>
 
-  <section class="gaming_sec_iframe">
+  <!-- <section class="gaming_sec_iframe">
     <div class="gaming_row_iframe">
       <div class="gaming_col_iframe">
         <img
@@ -82,10 +82,13 @@
         <div class="white_back"></div>
       </div>
     </div>
-  </section> 
+  </section>  -->
 
   <section class="types_sports_sec_iframe">
     <div class="sports_type_row">
+      <div class="sports_col_1_iframe">
+        <img class="managed_images" src="assets/sirplay sportbook 1.webp" />
+      </div>
       <div class="sports_col_iframe">
         <h1 class="types_header">Fully managed sportsbook</h1>
         <p class="type_para">
@@ -102,9 +105,7 @@
 
         <div class="white_back"></div>
       </div>
-      <div class="sports_col_1_iframe">
-        <img class="managed_images" src="assets/sirplay sportbook 1.webp" />
-      </div>
+   
     </div>
   </section>
 
