--- a/src/app/i-frame/i-frame.component.html
+++ b/src/app/i-frame/i-frame.component.html
@@ -25,6 +25,13 @@
 
   <section class="types_sports_sec">
     <div class="sports_type_row">
+      <div class="sports_col">
+
+        <img
+        class="types_images"
+        src="assets/sirplay image 4 (1).webp"
+      />
+      </div>
       <div class="sports_col_1">
         <h1 class="types_header">Types of sportsbook iframe</h1>
         <p class="type_para">
@@ -49,18 +56,12 @@
 
         <div class="white_back"></div>
       </div>
-      <div class="sports_col">
-
-        <img
-        class="types_images"
-        src="assets/sirplay image 4 (1).webp"
-      />
-      </div>
+     
       
     </div>
   </section>
-
-  <!-- <section class="gaming_sec_iframe">
+<!-- 
+  <section class="gaming_sec_iframe">
     <div class="gaming_row_iframe">
       <div class="gaming_col_iframe">
         <img
@@ -86,9 +87,6 @@
 
   <section class="types_sports_sec_iframe">
     <div class="sports_type_row">
-      <div class="sports_col_1_iframe">
-        <img class="managed_images" src="assets/sirplay sportbook 1.webp" />
-      </div>
       <div class="sports_col_iframe">
         <h1 class="types_header">Fully managed sportsbook</h1>
         <p class="type_para">
@@ -105,7 +103,9 @@
 
         <div class="white_back"></div>
       </div>
-   
+      <div class="sports_col_1_iframe">
+        <img class="managed_images" src="assets/sirplay sportbook 1.webp" />
+      </div>
     </div>
   </section>
 
