--- a/src/app/contact-com/contact-com.component.html
+++ b/src/app/contact-com/contact-com.component.html
@@ -9,8 +9,10 @@
       </p>
       <div class="contact_social">
         <div class="contact_details">
-          <div class="row_col">
+          <div class="row_col" style="cursor: pointer;">
+            <a href="skype:live:9960f32f776599a2?chat">
             <img src="assets/Skype_logo.webp" />
+          </a>
           </div>
           <div class="row_col_1">
             <p class="contact_b">English Spanish</p>
@@ -19,11 +21,14 @@
       </div>
       <div class="contact_social">
         <div class="contact_details">
+
           <div class="row_col">
+            <a href="https://wa.me/+918268808222">
             <img class="whats_img" src="assets/Whatsapp.webp" />
+            </a>
           </div>
           <div class="row_col_1">
-            <p class="contact_a">+356 99972143</p>
+            <p class="contact_a">+918268808222</p>
           </div>
         </div>
       </div>
