--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -135,10 +135,10 @@
           <li>Other games 200 + more than</li>
         </ul>
 
-        <p class="casino_para_1">
+        <!-- <p class="casino_para_1">
           Available in the
           <span class="white_change">Crypto Casino web3</span> version
-        </p>
+        </p> -->
         <p class="casino_para">
           Our staff will assist you in all phases from initial training to
           production start-up.
@@ -167,7 +167,7 @@
         </h1>
         <img
           src="assets/sirplay vrnl 19.webp"
-          width="809"
+          width="790"
           height="372"
         />
       </div>
@@ -193,7 +193,7 @@
     </div>
   </section>
 
-  <section class="Web3_sec">
+  <!-- <section class="Web3_sec">
     <div class="web3_row">
       <div class="web3_col">
         <h1 class="web3_header">Web3 sportsbook</h1>
@@ -231,9 +231,9 @@
         />
       </div>
     </div>
-  </section>
+  </section> -->
 
-  <section class="crypto_sec">
+  <!-- <section class="crypto_sec">
     <div class="crypto_row">
       <div class="crypto_col">
         <h1 class="crypto_header">Crypto Sportsbook</h1>
@@ -264,7 +264,7 @@
         />
       </div>
     </div>
-  </section>
+  </section> -->
 
   <section class="integration_sec">
     <div class="integration_row">
