--- a/src/app/main-sec/main-sec.component.css
+++ b/src/app/main-sec/main-sec.component.css
@@ -456,8 +456,10 @@ display: none;
 }
 
 .live_header{
-    width: 79%;
+    width: 82%;
     font-weight: 600;
+    font-size: 33px;
+    margin-bottom: 30px;
 }
 .live_col{
     width: 60%;
@@ -470,12 +472,14 @@ display: none;
     font-weight: 600;
     margin-left: 75px;
     font-size: 35px;
+    margin-bottom: 30px;
 }
 .live_casino_list{
-    font-size: 18px;
+    font-size: 16px;
     color: gray;
     line-height: 1.5;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins';
+    font-weight: 300;
 }
 
 @media (max-width:820px){
@@ -662,13 +666,15 @@ height: 330px;
     font-size: 30px;
     font-weight: 600;
     margin-bottom: 35px; 
-    font-size: 33px;
+
  
 }
 .integration_para{
-    font-size: 18px;
-    width: 78%;
-    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    width: 86%;
+    font-family: 'Poppins';
+    font-weight: 300;
+    color: black;
 }
 .inte_bold{
 font-weight: 600;
