--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -17,7 +17,7 @@
 
   <section class="about-section1-container">
     <div class="about-section1-main">
-      <h6 class="section-title  dark_title">Vrnl</h6>
+      <!-- <h6 class="section-title  dark_title">Vrnl</h6> -->
       <h1 style="font-family: Poppins;">Online Gaming Provider</h1>
 
       <div class="about_map">
@@ -143,14 +143,14 @@
     </div>
   </section>
   <section class="about-section3-container">
-    <h2>Vrnl's certified</h2>
+    <!-- <h2>Vrnl's certified</h2>
     <p style="color: #686868;">
       Vrnl works to ensure our application complies with all the guidelines
       published by the different jurisdictions. Vrnl’s Sports Betting
       System has been tested and certified by leading industry entities.
       Vrnl’s Sports Betting Software has already achieved 4 certifications
       of quality and security, and others are in progress.
-    </p>
+    </p> -->
 
     <p>&nbsp;</p>
 
