--- a/src/app/mobile/mobile.component.html
+++ b/src/app/mobile/mobile.component.html
@@ -31,16 +31,16 @@
                 <br>
                 All mobile apps offer instant access by a tap. The allow users to place a bet, check the game account, play casino and choose the favourite league. </p>
 
-            <p><strong> Push Notifications and instant updates</strong>
+            <!-- <p><strong> Push Notifications and instant updates</strong>
                 <br>
                 The ability to send instant and non-intrusive notifications to your app users is a major reason why bookmaker and lotteries should build an app.<br>
-It will also allow you to promote a match, league or bet, regularly increasing your sales and profits. </p>
+It will also allow you to promote a match, league or bet, regularly increasing your sales and profits. </p> -->
     
 
         </div>
         
         <div class="mobile-advantages-right">
-            <img src="assets/Advantages-of-Mobile-betting.webp" alt="">
+            <img src="assets/Sirplay image 7.webp" alt="" class="image_1">
         </div>
 
     </div>
