--- a/src/app/whitecasino/whitecasino.component.html
+++ b/src/app/whitecasino/whitecasino.component.html
@@ -37,7 +37,7 @@
     <ul class="white_f_list" >
         <li> <strong class="black-color">The largest catalog of online casino games on the planet, </strong> selected from the best providers in the industry.
         </li>
-        <li>All games on our platform are <strong class="black-color"> certified and the math is guaranteed.</strong> </li>
+        <!-- <li>All games on our platform are <strong class="black-color"> certified and the math is guaranteed.</strong> </li> -->
         <li> <strong class="black-color">Bonus Tools</strong> and Slot profitability
         </li>
         <li> <strong class="black-color">Campaign builder</strong> and management of game tournaments</li>
