--- a/src/app/footers2/footers2.component.css
+++ b/src/app/footers2/footers2.component.css
@@ -111,6 +111,11 @@ color: #fff;
     font-size: 14px;
     margin-top: 40px;
     text-align: center;
+    letter-spacing: 1px;
+    opacity: 1;
+    color: #333;
+    line-height: 1.3;
+    font-family: "Raleway",sans-serif;
 }
 @media screen and (max-width: 820px){
 
