--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -206,7 +206,7 @@
   <p>&nbsp;</p>
   <p style="color: #686868;"><strong style="color: #000;">What is a casino white label?</strong><br>
   A casino white label solution is the perfect solution for the operators who want to work with online casinos.<br>
-  Thanks to its experience, Sirplay casino white label, will offer certified and secure casino games.<br>
+  Thanks to its experience, Sirplay casino white label.<br>
   Sirplay Casino white label allows you to customize the casino based on your favourite language and currency.</p>
   <p>&nbsp;</p>
   <p style="color: #686868;"><strong strong style="color: #000;">What is a white label sportsbook?</strong><br>
@@ -231,10 +231,10 @@
   <ul style="color: #686868;">
   <li><strong>Platform Administrator Level</strong><br>
   This level is the admittance to the backend. Likewise, it makes different gets to the Administrative center with restricted honors and permissions is additionally conceivable).</li>
-  <li><strong>Reseller Level<br>
+  <!-- <li><strong>Reseller Level<br>
   </strong>This level is for expert-agent managing numerous betting shops. As a result, there are commission benefits on the shop’s turnover or Earns.</li>
   <li><strong>Betting Shop Level<br>
-  </strong>This level refers to the actual place where players can play, deposit, and so forth. Through this record, it is feasible to put down bets and procure commission on turnover or profits.</li>
+  </strong>This level refers to the actual place where players can play, deposit, and so forth. Through this record, it is feasible to put down bets and procure commission on turnover or profits.</li> -->
   <li><strong>Cashier Level<br>
   </strong>This level suitably describes betting shops’ representatives, ready to engage bets without acquiring any commissions.</li>
   <li><strong>Online player Level<br>
