--- a/src/app/online-casino-software/online-casino-software.component.html
+++ b/src/app/online-casino-software/online-casino-software.component.html
@@ -92,7 +92,7 @@
           </li>
           <li>API for Business intelligence BI</li>
           <li>Marketing tools</li>
-          <li> Crypto, Metamask and many others wallets.</li>
+          <!-- <li> Crypto, Metamask and many others wallets.</li> -->
           <li>API for external integration</li>
         </ol>
         <p class="casino_whites_sec_p">
@@ -308,22 +308,21 @@
           A casino software white label solution is the perfect solution for
           the operators who want to work with online casinos. Thanks to its
           experience,<br />
-          Vrnl casino white label, will offer certified and secure casino
-          games. Vrnl Casino white label allows you to customize the casino
+           Vrnl Casino white label allows you to customize the casino
           based on<br />
           your favourite language and currency.<br /><br /><br />
         </p>
 
         <h3>What do we offer as casino software provider?</h3>
         <ul class="user_list">
-          <li>
+          <!-- <li>
             Appropriate Verification Strategies KYC, supported by the
             regulatory organizations
           </li>
           <li>
             Effective online payments options for gambling included Bitcoin
             and cryptocurrencies
-          </li>
+          </li> -->
           <li>
             Excellent affiliate marketing tools, and profitable referral
             system
@@ -351,12 +350,12 @@
             <span style="color: #000000;">This level is the admittance to the backend. Likewise, it makes different gets
               to the Administrative center with restricted honors and permissions is additionally conceivable).</span>
           </li>
-          <li><span style="color: #000000;"><strong>Reseller Level<br>
+          <!-- <li><span style="color: #000000;"><strong>Reseller Level<br>
               </strong>This level is for expert-agent managing numerous betting shops. As a result, there are commission
               benefits on the shop’s turnover or Earns.</span></li>
           <li><span style="color: #000000;"><strong>Betting Shop Level<br>
               </strong>This level refers to the actual place where players can play, deposit, and so forth. Through this
-              record, it is feasible to put down bets and procure commission on turnover or profits.</span></li>
+              record, it is feasible to put down bets and procure commission on turnover or profits.</span></li> -->
           <li><span style="color: #000000;"><strong>Cashier Level<br>
               </strong>This level suitably describes betting shops’ representatives, ready to engage bets without
               acquiring any commissions.</span></li>
@@ -376,7 +375,7 @@
           the importing of the structure is implemented on our own end.<br /><br /><br />
         </p>
 
-        <h3>
+        <!-- <h3>
           Is possible to offer online Casino software in the gambling clubs?
         </h3>
         <p>
@@ -385,7 +384,7 @@
           offer <br />sports betting too. Indeed, our retail level arrangement
           will be the ideal decision since it will <br />permit us to set up
           cashier’s accounts to deal with the sports betting tickets deal.
-        </p>
+        </p> -->
 
         <h3>
           <span class="que"><strong>Other questions?</strong></span>
