--- a/src/app/casino-games/casino-games.component.html
+++ b/src/app/casino-games/casino-games.component.html
@@ -100,8 +100,8 @@
     
         <div class="index3-right-text">
             <h1>We Provide Online Turnkey Casino Solutions, Literally!<br></h1>
-            <p><b class="index3-right-text-bold">Company Setup & Bank Account Opening</b></p>
-            <p><b class="index3-right-text-bold">Regulation Compliance & Gaming License</b></p>
+            <!-- <p><b class="index3-right-text-bold">Company Setup & Bank Account Opening</b></p> -->
+            <!-- <p><b class="index3-right-text-bold">Regulation Compliance & Gaming License</b></p> -->
             <p><b class="index3-right-text-bold">Casino White Label Solution</b></p>
             <p><b class="index3-right-text-bold">Logo & Website Branding</b></p>
             <p><b class="index3-right-text-bold">Trading Tools (training)</b></p>
