--- a/src/app/footers2/footers2.component.html
+++ b/src/app/footers2/footers2.component.html
@@ -2,65 +2,70 @@
     <div class="container_footer">
         <div class="footer_row">
             <div class="footer_col">
-    <img src="assets/glicertified.png.webp">
-    <p class="footer_para">Certified Platform</p>
+                <img src="assets/glicertified.png.webp">
+                <p class="footer_para">Certified Platform</p>
             </div>
             <div class="footer_col_1">
                 <img src="assets/iso-27701.png.webp">
                 <p class="footer_para">ISO 27001</p>
-             
+
             </div>
             <div class="footer_col_2">
                 <img src="assets/experience-badge.png.webp">
-           <p class="footer_para">Experience</p>
+                <p class="footer_para">Experience</p>
             </div>
             <div class="footer_col_3">
                 <img src="assets/qiss.png.webp">
-        
+
             </div>
         </div>
     </div>
-    
-    </section>
-    
-    <section class="social_sec">
-        <div class="social_icons">
+
+</section>
+
+<section class="social_sec">
+    <div class="social_icons">
         <div class="social_row">
             <div class="social_card">
-                <div class="card_container">
-                    <i class="fa-brands fa-facebook-f"></i> 
-                </div>
+                <a style="color: #000;" href="https://www.facebook.com/profile.php?id=100092326342619&mibextid=LQQJ4d">
+                    <div class="card_container">
+                        <i class="fa-brands fa-facebook-f"></i>
+                    </div>
+                </a>
             </div>
-        
+
             <div class="social_card_1">
                 <div class="card_container">
                     <i class="fa-brands fa-twitter"></i>
-                        </div>
+                </div>
             </div>
-        
+
             <div class="social_card_2">
                 <div class="card_container">
                     <i class="fa-brands fa-linkedin"></i>
-                        </div>
+                </div>
             </div>
-        
+
             <div class="social_card_3">
                 <div class="card_container">
                     <i class="fa-brands fa-square-youtube"></i>
-                        </div>
+                </div>
             </div>
-        
+
             <div class="social_card_4">
-                <div class="card_container">
-                    <i class="fa-brands fa-instagram"></i>
-                                </div>
+                <a style="color: #000;" href="https://www.instagram.com/vrnl_exchange">
+                    <div class="card_container">
+                        <i class="fa-brands fa-instagram"></i>
+                    </div>
+                </a>
             </div>
-        
-        
-        
-        </div> 
-        <p class="footer_para_1">Vrnl's logo and graphic material is the company's intellectual property and may not be copied, reproduced, distributed or displayed without written consent of Vrnl.
-        
+
+
+
+        </div>
+        <p class="footer_para_1">Vrnl's logo and graphic material is the company's intellectual property and may not be
+            copied, reproduced, distributed or displayed without written consent of Vrnl.
+
             Copyright © 2020 Vrnl ltd. All rights reserved.</p>
-        </div>  
-        </section>
+    </div>
+</section>
