--- a/src/app/lottery-games/lottery-games.component.css
+++ b/src/app/lottery-games/lottery-games.component.css
@@ -1533,8 +1533,8 @@ color: #fff;
     display: flex;
     padding-top:10%;
     font-family: Raleway, sans-serif;
-    justify-content: center;
-    gap: 7%;
+    /* justify-content: center; */
+    /* gap: 7%; */
 }
 
 .index4-left-text{
@@ -1545,7 +1545,7 @@ color: #fff;
     color: #a0c528;
     font-size: 44px;
     font-weight: 600;
-
+    font-family: "Raleway",sans-serif;
     line-height: 1.3;
 }
 
@@ -3201,4 +3201,14 @@ whites_param {
 .images_data{
   width: 591px;
   height: 451px;
+}
+.index4-left-text{
+  padding-right: 7.5%;
+    padding-bottom: 7.5%;
+    padding-left: 7.5%;
+}
+@media (min-width:768px) {
+  .index4-left-text{
+    width: 100%;
+  }
 }
