--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -401,9 +401,7 @@
 
       <h3 class="faq_header_2">What is a white label betting site?</h3>
       <p class="faq_para">
-        A white label betting site is a fully customised platform. Vrnl’s
-        white label betting site provides certified games, bonus system,
-        payment gateways. The User Interface content, language and currency
+        A white label betting site is a fully customised platform. The User Interface content, language and currency
         are based on your choice, indeed Vrnl makes available different
         graphic templates, features and tools.
       </p>
@@ -452,7 +450,7 @@
         different gets to the Administrative center with restricted honors and
         permissions is additionally conceivable).
       </p>
-      <li class="faq_li">Reseller Level</li>
+      <!-- <li class="faq_li">Reseller Level</li>
       <p class="faq_para_3">
         This level is for expert-agent managing numerous betting shops. As a
         result, there are commission benefits on the shop’s turnover or Earns.
@@ -463,7 +461,7 @@
         This level refers to the actual place where players can play, deposit,
         and so forth. Through this record, it is feasible to put down bets and
         procure commission on turnover or profits.
-      </p>
+      </p> -->
 
       <li class="faq_li">Cashier Level</li>
       <p class="faq_para_3">
@@ -489,7 +487,7 @@
         own end.
       </p>
 
-      <h3 class="faq_header_2">
+      <!-- <h3 class="faq_header_2">
         Is possible to offer sports betting services in the gambling clubs?
       </h3>
       <p class="faq_para_1">
@@ -498,9 +496,9 @@
         offer sports betting too. Indeed, our retail level arrangement will be
         the ideal decision since it will permit us to set up cashier’s
         accounts to deal with the sports betting tickets deal.
-      </p>
+      </p> -->
 
-      <h3 class="faq_header_2">What are the available Bitcoin sportsbook?</h3>
+      <!-- <h3 class="faq_header_2">What are the available Bitcoin sportsbook?</h3>
       <p class="faq_para_2">
         Ultimately, there are two accessible methods of the Bitcoin
         sportsbook:
@@ -513,7 +511,7 @@
       <p class="faq_para_1">
         Option 2: Utilize BTC as a deposit technique and bet in Government
         issued money.
-      </p>
+      </p> -->
 
       <h3 class="faq_header_2">
         Can traders have access to complete management of the odds and the
@@ -540,7 +538,7 @@
 
     <div class="sirplay_sec">
       <div class="sirplay_certificate">
-        <h2 class="sirplay_head">Vrnl is certified</h2>
+        <!-- <h2 class="sirplay_head">Vrnl is certified</h2>
         <p class="sirplay_para">
           Vrnl works to ensure our application complies with all the
           guidelines published by the different jurisdictions. Vrnl’s
@@ -548,7 +546,7 @@
           industry entities. Vrnl’s Sports Betting Software has already
           achieved 4 certifications of quality and security, and others are in
           progress.
-        </p>
+        </p> -->
 
         <h2 class="sirplay_head">Our Partners</h2>
         <p class="sirplay_para">
