--- a/src/app/whitecasino/whitecasino.component.html
+++ b/src/app/whitecasino/whitecasino.component.html
@@ -90,7 +90,7 @@
         <li>Player Account Controls, Registration and Verification, Fraudulent Accounts detections system</li>
         <li>Geolocation tools to extract IP address location information</li>
     </ul>
-    <p>Wait, there’s more
+    <p><strong class="color-grey">Wait, there’s more</strong>
     </p>
     <p class="whites_sol_p2"> <strong>Vrnl’s platform is optimized for exceptional performance</strong>  and high stability. We use the latest technology, which performs up to 2x faster than conventional casino platform around.
         Our long experience and our intuition gave birth to the fastest and most powerful application existing nowadays.</p>
@@ -135,7 +135,7 @@
     </div>
     </section>
     
-    <section class="play_sec">
+    <!-- <section class="play_sec">
     <div class="white_play_row">
         <div class="white_play_col">
     <img class="pay_images" src="assets/sirplay vrnl 32_payment.webp">
@@ -173,6 +173,6 @@
     
         </div>
     </div>
-    </section>
+    </section> -->
    <app-contact-component2></app-contact-component2>
 <app-footers2></app-footers2>
