--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -268,9 +268,9 @@
               <div class="accordion-body">
                 <a routerLink="/casino/tournaments">Casino Tournaments</a>
               </div>
-              <div class="accordion-body">
+              <!-- <div class="accordion-body">
                 <a routerLink="/streaming-platform-casino-and-betting">Streaming platform</a>
-              </div>
+              </div> -->
             </div>
           </div>
 
@@ -302,7 +302,7 @@
             </div>
           </div>
 
-          <div class="accordion-item">
+         <!-- <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingFive">
               <button
                 class="accordion-button collapsed"
@@ -336,9 +336,9 @@
               <div class="accordion-body">
                 <a routerLink="/bitcoin-sportsbook" >Bitcoin sportsbook</a>
               </div>
-              <!-- <div class="accordion-body"> Streaming platform</div> -->
-            </div>
-          </div>
+               <div class="accordion-body"> Streaming platform</div> -->
+            <!-- </div>
+          </div> --> 
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingSix">
               <button
@@ -358,9 +358,9 @@
               aria-labelledby="flush-headingSix"
               data-bs-parent="#accordionFlushExample"
             >
-              <div class="accordion-body">
+              <!-- <div class="accordion-body">
                 <a routerLink="/demo-sportsbook" >Demo</a>
-              </div>
+              </div> -->
               <div class="accordion-body">
                 <a routerLink="/about-us">About Us</a>
               </div>
@@ -369,9 +369,9 @@
                   >Online sportsbook Software</a
                 >
               </div>
-              <div class="accordion-body">
+              <!-- <div class="accordion-body">
                 <a routerLink="/certified-sports-betting-software">Certifications</a>
-              </div>
+              </div> -->
               <!-- <div class="accordion-body"> Bitcoin sportsbook</div> -->
               <!-- <div class="accordion-body"> Streaming platform</div> -->
             </div>
