--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -167,7 +167,7 @@
         </h1>
         <img
           src="assets/sirplay vrnl 19.webp"
-          width="790"
+          width="809"
           height="372"
         />
       </div>
@@ -193,7 +193,7 @@
     </div>
   </section>
 
-  <!-- <section class="Web3_sec">
+  <section class="Web3_sec">
     <div class="web3_row">
       <div class="web3_col">
         <h1 class="web3_header">Web3 sportsbook</h1>
@@ -231,9 +231,9 @@
         />
       </div>
     </div>
-  </section> -->
+  </section>
 
-  <!-- <section class="crypto_sec">
+  <section class="crypto_sec">
     <div class="crypto_row">
       <div class="crypto_col">
         <h1 class="crypto_header">Crypto Sportsbook</h1>
@@ -264,7 +264,7 @@
         />
       </div>
     </div>
-  </section> -->
+  </section>
 
   <section class="integration_sec">
     <div class="integration_row">
@@ -300,7 +300,7 @@
       <div class="start_details">
         <h1 class="start_header">Before starting, see it in action!</h1>
         <p class="start_para">A demo platform:</p>
-        <a href=" https://www.lc247.co/m/sports" target="_blank" style="color: #a0c528;"><p class="start_a"> https://www.lc247.co/m/sports</p></a>
+        <a href="#"><p class="start_a">https://rex.games</p></a>
       </div>
     </div>
   </section>
