--- a/src/app/casino-tournament/casino-tournament.component.html
+++ b/src/app/casino-tournament/casino-tournament.component.html
@@ -35,7 +35,7 @@
 
 
 
-<section class="conatiner14">
+<!-- <section class="conatiner14">
     <div class="index5-leftimg">
         <img class="tourna_images" src="assets/sirplay vrnl 3.webp" alt="">
 
@@ -62,5 +62,5 @@
         
     </div>
 
-</section>
+</section> -->
 <app-footers2></app-footers2>
