--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -3,8 +3,7 @@
 <section id="animate-area">
     <div class="main_sec"> 
          <section class="typing-container">
-             <h1 class="home_header_h1">Contact Us
-                <span class="typing-text"></span></h1>
+             <h1 class="home_header_h1">Contact Us  <span class="typing-text"></span></h1>
            </section>
            <p class="param">A company which is constantly striving for Innovative Solutions for the Business Needs</p>
  
@@ -17,7 +16,7 @@
 
   <section class="contact-section1-container">
     <div class="contact-section1-main">
-        <h1>Gaming solutions experts</h1>
+        <h1>Online Gaming Provider</h1>
         <div class="contact-section1-img">
         <img src="assets/sirplay-market_2022-1-768x369.png" alt="">
       </div>
