--- a/src/app/header2/header2.component.html
+++ b/src/app/header2/header2.component.html
@@ -101,7 +101,7 @@
 
                       </div>
                     </div>
-                    <div class="accordion-item">
+                    <!-- <div class="accordion-item">
                       <h2 class="accordion-header" id="flush-headingThree">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
                             WEB3 
@@ -112,7 +112,7 @@
                         <div class="accordion-body"><a routerLink="/crypto-casino">Crypto Casino</a></div>
 
                       </div>
-                    </div>
+                    </div> -->
 
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="flush-headingFour">
